--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,18 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
+                  "maximumWarning": "10kb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "bundle",
+                  "name": "main",
+                  "maximumWarning": "10kb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "allScript",
+                  "maximumWarning": "10kb",
                   "maximumError": "5mb"
                 }
               ]
