--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "stats": "webpack-bundle-analyzer dist/formation1409/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,7 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^1.9.0",
+    "webpack-bundle-analyzer": "^3.9.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
